k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-coach
  namespace: devops-coach
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: devops-coach
