k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-coach-ingress
  namespace: devops-coach
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: devops.infotitans.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-coach
                port:
                  number: 80
  tls:
    - hosts:
        - devops.infotitans.com
      secretName: devops-coach-tls
